# pi-adapter

./: .gitignore  CMakeLists.txt  README.md  uac1_gadget.sh
cmake/: Findaoip.cmake
src/: pi-adapter.c  record.c
